tests/diagnostic_golden_cc/semantic_abstract_module_procedure.f90
module m
  abstract interface
    module procedure foo
  end interface
contains
  subroutine foo()
  end subroutine
end module
